<resources>
    <string name="app_name">Asclepius</string>
    <string name="gallery">Galeri</string>
    <string name="analyze">Analyze</string>
    <string name="result">Analysis Result</string>
    <string name="image_classifier_failed">Image classifier failed to initialize. See error logs for details</string>
    <string name="image_error">Error Input dulu yaa gambarnya\n</string>
    <string name="analyze_error">Analyze error:(\n</string>
    <string name="title">Judul</string>
    <string name="description">Description</string>
    <string name="Author">Penulis</string>
    <string name="welcome">Cancer Detection</string>
    <string name="news_str">Hot News</string>
    <string name="result_text">Our prediction is</string>
    <string name="hasil">hasil</string>


</resources>